mdapipkg/unpackaged/objects/Error_Log__c.object
<CustomObject>
    <fields>
        <fullName>DML_Operation__c</fullName>
        <label>DML Operation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Error_Message__c</fullName>
        <label>Error Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Fields__c</fullName>
        <label>Fields</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Object__c</fullName>
        <label>Object</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order</label>
        <referenceTo>Order</referenceTo>
        <relationshipLabel>Error Logs</relationshipLabel>
        <relationshipName>Error_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Payload__c</fullName>
        <label>Payload</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Timestamp__c</fullName>
        <label>Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Week__c</fullName>
        <formula>&apos;Week &apos; + TEXT(ISOWEEK(CreatedDate )) + &apos; &apos; + TEXT(YEAR(DATEVALUE(CreatedDate)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Week</label>
        <type>Text</type>
    </fields>
    <label>Error Log</label>
    <listViews>
        <fullName>Account</fullName>
        <columns>NAME</columns>
        <columns>Error_Message__c</columns>
        <columns>DML_Operation__c</columns>
        <columns>Fields__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Object__c</field>
            <operation>equals</operation>
            <value>Account</value>
        </filters>
        <label>Account</label>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Error_Message__c</columns>
        <columns>Object__c</columns>
        <columns>Fields__c</columns>
        <columns>Payload__c</columns>
        <columns>DML_Operation__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Commerce_Entitlement_Product</fullName>
        <columns>NAME</columns>
        <columns>Fields__c</columns>
        <columns>Error_Message__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Payload__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Object__c</field>
            <operation>equals</operation>
            <value>CommerceEntitlementProduct</value>
        </filters>
        <label>Commerce Entitlement Product</label>
    </listViews>
    <listViews>
        <fullName>Pricebook_Entries</fullName>
        <columns>NAME</columns>
        <columns>Fields__c</columns>
        <columns>Error_Message__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Object__c</field>
            <operation>equals</operation>
            <value>PriceBookEntry</value>
        </filters>
        <label>Pricebook Entries</label>
    </listViews>
    <listViews>
        <fullName>Product_Attribute</fullName>
        <columns>NAME</columns>
        <columns>Fields__c</columns>
        <columns>Error_Message__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Object__c</field>
            <operation>equals</operation>
            <value>ProductAttribute</value>
        </filters>
        <label>Product Attribute</label>
    </listViews>
    <listViews>
        <fullName>Products</fullName>
        <columns>NAME</columns>
        <columns>Fields__c</columns>
        <columns>Error_Message__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Object__c</field>
            <operation>equals</operation>
            <value>Product2</value>
        </filters>
        <label>Products</label>
    </listViews>
    <nameField>
        <displayFormat>EL-{00000}</displayFormat>
        <label>Error Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Error Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>